Fix Download Manager autolayout issue.

Download Manager has the following UI elements:
 - state icon
 - status text (f.e. <File Name> 10 MB)
 - action button (f.e. Download)
 - close button

Status text width is highly variable and often does not fit the UI. So
status text width should be flexible and action button width should be
constant.

This sets setContentCompressionResistancePriority: for status label to
UILayoutPriorityDefaultLow.

Bug: 822768
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I9505511e7d3a1a8dbcf22c7df406530cb270c55a
Reviewed-on: https://chromium-review.googlesource.com/966794
Commit-Queue: Eugene But <eugenebut@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543849}
Former-commit-id: bc269b60efe34705a28d1015fc4fd8c5512357a7