ios/chrome/browser/ui/download/download_manager_view_controller.mm
@@ -409,6 +409,10 @@ NSString* GetSizeString(long long size_in_bytes) {
     _statusLabel = [[UILabel alloc] initWithFrame:CGRectZero];
     _statusLabel.translatesAutoresizingMaskIntoConstraints = NO;
     _statusLabel.font = [MDCTypography subheadFont];
+    [_statusLabel
+        setContentCompressionResistancePriority:UILayoutPriorityDefaultLow
+                                        forAxis:
+                                            UILayoutConstraintAxisHorizontal];
     [self updateStatusLabel];
   }
   return _statusLabel;
